6/20/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.5.3 'Ardee West':
	- third-party authorization STUn attributes adjusted according to the
	values assigned by IANA.
	
5/29/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.5.2 'Ardee West':
	- dual allocation adjusted according to the new TURN-bis draft;
	- options sha256, sha384, sha512 retired as non-standard;
	- third-party authorization (oAuth) updated according to the
	version 16 of the draft;
	- C++ compilation fixes;
	- cosmetic fixes;
	- fixed binary package for CentOS 7.1;
	- support for older SQLite versions added;  
	- compilation support for older CentOS release 5.x added;
	- Issue 11 fixed;
	- Issue 12 fixed.

3/31/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.4.2 'Ardee West':
	- SCTP fixes;
	
3/15/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.4.1 'Ardee West':
	- 'native' SCTP support (experimental);
	- option of encrypted stored passwords for web admin users;
	- option of encrypted stored password for CLI user;

2/28/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.2.3 'Ardee West':
	- bandwidth control fixed;
	- STUN/TURN control traffic counted separately from data traffic,
	for the sake of the bandwidth control;
	- higher bandwidth limit capacity on 64 bits systems;
	- redis operations with the realm options fixed;
	
2/18/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.2.2 'Ardee West':
	- admin_user table schema fixed;
	- REST API docs fixed;
	- Amazon AWS uses syslog;
	
2/3/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.2.1 'Ardee West':
	- (HMAC-)SHA-512 and -384 algorithms added;
	- TOS (DiffServer) and TTL IP header field handling fixed;
	- updates according to the new third-party-auth draft (oauth);
	- peer logging added;
	
2/1/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.1.2 'Ardee West':
	- SSODA updates according to turnbis specs;
	- TRANSPORT attribute handling fixed;
	- hostname-to-IP-address resolution fix;